Projet_GL/src/test/deca/context/valid/unprovided/print_cast.deca
// Description: print d'un cast
// Resultat attendu: 12


{
    print((int) (12.3));
}
