Projet_GL/src/test/deca/context/invalid/unprovided/variableDoubleDef.deca
{
	//double definition de a : regle 3.17
	int a;
	float a;
}
